# HaskellHomeLink

./: .dir-locals.el  .gitignore  AssistantPi.cabal  Audio.cabal  CHANGELOG.md  LICENSE  README.org  XCompile.cabal  cabal.project  cabal.project.freeze  flake.nix  fourmolu.yaml
app/: Audio.hs  Error.hs  ErrorStack.hs  Loop.hs  MP3.hs  Main.hs  Main.hs.bk  Other.hs  TinyServant.hs
app/Error/: Errno.hs  Generic.hs  Parser.hs
app/HTTP/: Client.hs
app/Rest/: OS.hs  Server.hs  System.hs  Utils.hs
app/System/: CPU.hs  OS.hs
app/TinyServant/: Combinators.hs  Server.hs  Union.hs
cbits/: CMakeLists.txt  alsa.cpp  haskell_alsa.c  haskell_alsa.h  main.c  main.cpp  minimp3.h  my_mini.c  my_mini.h  types.c  types.h
cbits/minimp3/: minimp3-hs.c  mymini.cpp
docs/: AI-DECLARATION.org  DESIGN.org  PROJECT.org  PROJECT.org_archive  home_config.json  proxy_config.json
libs/Alsa/: Alsa.cabal
libs/Minimp3/: Minimp3.hs
libs/alsa-hs/: CHANGELOG.md  alsa-hs.cabal
nix/: aarch64.nix  arm32.nix  arm64.nix  arm7.nix  docker.nix  hls-wrapper.nix  linux.nix  raspberryPi.nix  web.nix  xCompiled.nix
scripts/: compile-purescript-protos  deploy
software/libs/epoll-hs/cbits/: CMakeLists.txt  epoll_hs.c  epoll_hs.h  main.cpp
software/proto/: camera.proto  deviceData.proto  envelope.proto  home.proto  logging.proto  messages.proto  person.proto  proxy.proto  radio.proto
software/src/: HaskellHomeLink.cabal  Setup.hs  (+2 more)
src/: Lib.hs  PipeWire.hs
web/: .gitignore  index.html  main.js  package-lock.json  package.json  pure.js  pure.js.map  spago.yaml  vite.config.js
(+224 files in other folders)
